# chip-8

./: .gitignore  CMakeLists.txt  README.md
cmake/sdl2/: README.md
src/: buzzer.c  buzzer.h  chip8.c  chip8.h  emulator.c  emulator.h  main.c  screen.c  screen.h
